--- a/TD2/Exercice1/exercice1.html
+++ b/TD2/Exercice1/exercice1.html
@@ -8,102 +8,108 @@
 	<body>
 		<header>
 			<h1>Exercice 1</h1>
-			<p>Liste des éléments block et inline.</p>
+			<p>Donner la liste des éléments block et inline.</p>
 		</header>
+
 		<section>
-			<h2>Liste des éléments <i>inline</i></h2>
-			<ul>
-				<li>&lt;a&gt;</li>
-				<li>&lt;abbr&gt;</li>
-				<li>&lt;a&gt;</li>
-				<li>&lt;abbr&gt;</li>
-				<li>&lt;acronym&gt;</li>
-				<li>&lt;audio&gt;</li>
-				<li>&lt;b&gt;</li>
-				<li>&lt;bdi&gt;</li>
-				<li>&lt;bdo&gt;</li>
-				<li>&lt;big&gt;</li>
-				<li>&lt;br&gt;</li>
-				<li>&lt;button&gt;</li>
-				<li>&lt;canvas&gt;</li>
-				<li>&lt;cite&gt;</li>
-				<li>&lt;code&gt;</li>
-				<li>&lt;data&gt;</li>
-				<li>&lt;datalist&gt;</li>
-				<li>&lt;del&gt;</li>
-				<li>&lt;dfn&gt;</li>
-				<li>&lt;em&gt;</li>
-				<li>&lt;embed&gt;</li>
-				<li>&lt;i&gt;</li>
-				<li>&lt;iframe&gt;</li>
-				<li>&lt;img&gt;</li>
-				<li>&lt;input&gt;</li>
-				<li>&lt;ins&gt;</li>
-				<li>&lt;kbd&gt;</li>
-				<li>&lt;label&gt;</li>
-				<li>&lt;map&gt;</li>
-				<li>&lt;mark&gt;</li>
-				<li>&lt;meter&gt;</li>
-				<li>&lt;noscript&gt;</li>
-				<li>&lt;object&gt;</li>
-				<li>&lt;output&gt;</li>
-				<li>&lt;picture&gt;</li>
-				<li>&lt;progress&gt;</li>
-				<li>&lt;q&gt;</li>
-				<li>&lt;ruby&gt;</li>
-				<li>&lt;s&gt;</li>
-				<li>&lt;samp&gt;</li>
-				<li>&lt;script&gt;</li>
-				<li>&lt;select&gt;</li>
-				<li>&lt;slot&gt;</li>
-				<li>&lt;small&gt;</li>
-				<li>&lt;span&gt;</li>
-				<li>&lt;strong&gt;</li>
-				<li>&lt;sub&gt;</li>
-				<li>&lt;sup&gt;</li>
-				<li>&lt;svg&gt;</li>
-				<li>&lt;template&gt;</li>
-				<li>&lt;textarea&gt;</li>
-				<li>&lt;time&gt;</li>
-				<li>&lt;u&gt;</li>
-				<li>&lt;tt&gt;</li>
-				<li>&lt;var&gt;</li>
-				<li>&lt;video&gt;</li>
-				<li>&lt;br&gt;</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Liste des éléments <i>block</i></h2>
-			<ul>
-				<li>&lt;address&gt;</li>
-				<li>&lt;article&gt;</li>
-				<li>&lt;aside&gt;</li>
-				<li>&lt;blockquote&gt;</li>
-				<li>&lt;details&gt;</li>
-				<li>&lt;dialog&gt;</li>
-				<li>&lt;dd&gt;</li>
-				<li>&lt;div&gt;</li>
-				<li>&lt;dl&gt;</li>
-				<li>&lt;dt&gt;</li>
-				<li>&lt;fieldset&gt;</li>
-				<li>&lt;figcaption&gt;</li>
-				<li>&lt;figure&gt;</li>
-				<li>&lt;footer&gt;</li>
-				<li>&lt;form&gt;</li>
-				<li>&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;</li>
-				<li>&lt;header&gt;</li>
-				<li>&lt;hgroup&gt;</li>
-				<li>&lt;hr&gt;</li>
-				<li>&lt;li&gt;</li>
-				<li>&lt;main&gt;</li>
-				<li>&lt;nav&gt;</li>
-				<li>&lt;ol&gt;</li>
-				<li>&lt;p&gt;</li>
-				<li>&lt;pre&gt;</li>
-				<li>&lt;section&gt;</li>
-				<li>&lt;table&gt;</li>
+			<div>
+				<h2>Liste des éléments <i>inline</i></h2>
 				<ul>
-			</ul>
+					<li>&lt;a&gt;</li>
+					<li>&lt;abbr&gt;</li>
+					<li>&lt;a&gt;</li>
+					<li>&lt;abbr&gt;</li>
+					<li>&lt;acronym&gt;</li>
+					<li>&lt;audio&gt;</li>
+					<li>&lt;b&gt;</li>
+					<li>&lt;bdi&gt;</li>
+					<li>&lt;bdo&gt;</li>
+					<li>&lt;big&gt;</li>
+					<li>&lt;br&gt;</li>
+					<li>&lt;button&gt;</li>
+					<li>&lt;canvas&gt;</li>
+					<li>&lt;cite&gt;</li>
+					<li>&lt;code&gt;</li>
+					<li>&lt;data&gt;</li>
+					<li>&lt;datalist&gt;</li>
+					<li>&lt;del&gt;</li>
+					<li>&lt;dfn&gt;</li>
+					<li>&lt;em&gt;</li>
+					<li>&lt;embed&gt;</li>
+					<li>&lt;i&gt;</li>
+					<li>&lt;iframe&gt;</li>
+					<li>&lt;img&gt;</li>
+					<li>&lt;input&gt;</li>
+					<li>&lt;ins&gt;</li>
+					<li>&lt;kbd&gt;</li>
+					<li>&lt;label&gt;</li>
+					<li>&lt;map&gt;</li>
+					<li>&lt;mark&gt;</li>
+					<li>&lt;meter&gt;</li>
+					<li>&lt;noscript&gt;</li>
+					<li>&lt;object&gt;</li>
+					<li>&lt;output&gt;</li>
+					<li>&lt;picture&gt;</li>
+					<li>&lt;progress&gt;</li>
+					<li>&lt;q&gt;</li>
+					<li>&lt;ruby&gt;</li>
+					<li>&lt;s&gt;</li>
+					<li>&lt;samp&gt;</li>
+					<li>&lt;script&gt;</li>
+					<li>&lt;select&gt;</li>
+					<li>&lt;slot&gt;</li>
+					<li>&lt;small&gt;</li>
+					<li>&lt;span&gt;</li>
+					<li>&lt;strong&gt;</li>
+					<li>&lt;sub&gt;</li>
+					<li>&lt;sup&gt;</li>
+					<li>&lt;svg&gt;</li>
+					<li>&lt;template&gt;</li>
+					<li>&lt;textarea&gt;</li>
+					<li>&lt;time&gt;</li>
+					<li>&lt;u&gt;</li>
+					<li>&lt;tt&gt;</li>
+					<li>&lt;var&gt;</li>
+					<li>&lt;video&gt;</li>
+					<li>&lt;br&gt;</li>
+				</ul>
+			</div>
+		</section>
+		
+		<section>
+			<div>
+				<h2>Liste des éléments <i>block</i></h2>
+				<ul>
+					<li>&lt;address&gt;</li>
+					<li>&lt;article&gt;</li>
+					<li>&lt;aside&gt;</li>
+					<li>&lt;blockquote&gt;</li>
+					<li>&lt;details&gt;</li>
+					<li>&lt;dialog&gt;</li>
+					<li>&lt;dd&gt;</li>
+					<li>&lt;div&gt;</li>
+					<li>&lt;dl&gt;</li>
+					<li>&lt;dt&gt;</li>
+					<li>&lt;fieldset&gt;</li>
+					<li>&lt;figcaption&gt;</li>
+					<li>&lt;figure&gt;</li>
+					<li>&lt;footer&gt;</li>
+					<li>&lt;form&gt;</li>
+					<li>&lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;</li>
+					<li>&lt;header&gt;</li>
+					<li>&lt;hgroup&gt;</li>
+					<li>&lt;hr&gt;</li>
+					<li>&lt;li&gt;</li>
+					<li>&lt;main&gt;</li>
+					<li>&lt;nav&gt;</li>
+					<li>&lt;ol&gt;</li>
+					<li>&lt;p&gt;</li>
+					<li>&lt;pre&gt;</li>
+					<li>&lt;section&gt;</li>
+					<li>&lt;table&gt;</li>
+					<ul>
+				</ul>
+			</div>
 		</section>
 	</body>
 </html>
