--- a/TD5/form.html
+++ b/TD5/form.html
@@ -9,7 +9,8 @@
 	<body>
 		<form method="GET" action="http://localhost:1234/">
 			<input type="text" name="var"><br>
-			<input type="submit" value="Envoyer"><input type="reset" value="Annuler">
+			<input type="submit" value="Envoyer">
+			<input type="reset" value="Annuler">
 		</form>
 	</body>
 </html>
